sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:16: error: not found: type int
   var a:int=1
         ^AlgBubbleSort1:17: error: type mismatch;
 found   : Unit
 required: Boolean
  while(a=1) { 
         ^